# digits_to_word_nepali

./: .gitignore  README.md  pyproject.toml
digits_to_word_nepali/: __init__.py  nepali_converter.py
tests/: tests_nepali_converter.py
