[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digits_to_word_nepali"
version = "0.1.0"
description = "A package to convert digits into Nepali and English words."
authors = [{ name = "Nikish Subedi", email = "nikishsubedi1@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"
keywords = ["Nepali numbers", "number conversion", "digits to words"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
